# Inferflow

./: .gitignore  readme.md
docs/: 2026-06-22-inferflow-progress.md  llm-inference-engine-plan.md  phase1-cpp-engine-summary.md  two-week-llm-inference-roadmap.md
llama-engine/: CMakeLists.txt
llama-engine/bench/: bench_forward.cpp
llama-engine/demo/: chat_cli.cpp
llama-engine/include/llama/: config.h  engine.h  kv_cache.h  ops.h  quantization.h  sampler.h  tokenizer.h  weights.h
llama-engine/include/llama/backend/: backend.h  cpu_backend.h  cuda_backend.h
llama-engine/src/: engine.cpp  kv_cache.cpp  ops.cpp  quantization.cpp  sampler.cpp  tokenizer.cpp
llama-engine/src/backend/: backend.cpp  cpu_backend.cpp  cuda_backend.cu
llama-engine/test/: test_backend.cpp  test_cuda_backend.cpp  test_cuda_forward.cpp  test_engine.cpp  test_forward.cpp  test_int8_forward.cpp  test_ops.cpp  test_quantization.cpp
notix/httpserver/: CMakeLists.txt
notix/httpserver/inc/http/: beast_http.h
notix/httpserver/inc/inference/: chat_template.h  inference_service.h
notix/httpserver/inc/router/: router_rules.h
notix/httpserver/inc/session/: session_manager.h
notix/httpserver/src/http/: beast_http.cpp
notix/httpserver/src/inference/: chat_template.cpp  inference_service.cpp
notix/httpserver/src/router/: router_rules.cpp
notix/httpserver/src/session/: session_manager.cpp
notix/httpserver/static/: app.html  users.json
python_prototype/: README.md  export_model.py  llama_forward.py  requirements.txt  verify_against_hf.py
scripts/: build_all.sh
